Update Processing timeseries SWAT+ outputs.ipynb

--- a/Processing timeseries SWAT+ outputs.ipynb
+++ b/Processing timeseries SWAT+ outputs.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path='H:/raw_cordex_rcmdata/for_swatplus/swat+_models/nyando_obs_model/nyando_obs_model/Scenarios/Default/TxtInOut/'\n",
+    "path=r'path to TxtInOut folder'\n",
     "\n",
     "col_names = c=['jday', 'mon', 'day', 'yr', 'unit', 'gis_id', 'name', 'flo_in', 'geo_bf', 'flo_out', 'peakr', 'sed_in', 'sed_out', 'washld', 'bedld', 'dep', 'deg_btm_tons', 'deg_bank_tons', 'hc_sed', 'width', 'depth', 'slope', 'deg_btm', 'deg_bank', 'hc_len', 'flo_in_mm', 'aqu_in_mm', 'flo_out_mm', 'unassigned']\n",
     "channel_sd_morph_mon= pd.read_csv(path + 'channel_sdmorph_mon.txt',  delim_whitespace=True,skiprows=3,names=col_names)\n",
