Update Processing timeseries SWAT+ outputs.ipynb

--- a/Processing timeseries SWAT+ outputs.ipynb
+++ b/Processing timeseries SWAT+ outputs.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "## Timeseries data analysis\n",
     "\n",
-    "This section is primarily developed to analyse streamflow data from channel output files and can be used to analyze and plot the model output for channels that the user selects. The code was initially developed to compare the outputs from multiple regional climate models for the same catchment, but can also be used to analyze other outputs eg sediment loading, evapotranspiration etc."
+    "This section is primarily developed to analyse streamflow data from channel output files and can be used to analyze and plot the model output for channels that the user selects. The code was initially developed to compare the outputs from multiple regional climate models for the same catchment, but can also be used to analyze other outputs e.g. sediment loading, evapotranspiration etc."
    ]
   },
   {
