Update Processing timeseries SWAT+ outputs.ipynb

--- a/Processing timeseries SWAT+ outputs.ipynb
+++ b/Processing timeseries SWAT+ outputs.ipynb
@@ -840,9 +840,9 @@
    "source": [
     "nan=-99 #change if no value assigned to no data is different\n",
     "\n",
-    "path_obs=r'E:\\msc_wre\\msc_thesis\\SWAT_nyandocatchment\\calibration and validation/' #path to observed data\n",
-    "obs_raw=pd.read_csv(path_obs+'1gd03__regressedQ_monthly_rev1991_2012.csv')\n",
-    "obs_raw['date']=pd.to_datetime(obs_raw['Month'], format='%d/%m/%Y')\n",
+    "path_obs=r'<path to observed data folder>/' #path to observed data\n",
+    "obs_raw=pd.read_csv(path_obs+'obs_data.csv') #name of observed data file\n",
+    "obs_raw['date']=pd.to_datetime(obs_raw['Month'], format='%d/%m/%Y') #adapt according to columns in the file\n",
     "obs=obs_raw.replace(nan,np.NaN).set_index('date') #replace -99 with nan and set index"
    ]
   },
