--- a/Processing timeseries SWAT+ outputs.ipynb
+++ b/Processing timeseries SWAT+ outputs.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "
+    "#the environment should have these packages\n"
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as dates\n",
