--- a/Processing timeseries SWAT+ outputs.ipynb
+++ b/Processing timeseries SWAT+ outputs.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "
-    "#the environment should have these packages\n"
+    "#the environment should have these packages\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as dates\n",
